trustfall_core/src/resources/test_data/parse_errors/invalid_fold_transform_op.parse-error.ron
Err(UnsupportedTransformOperator("non_existent", Pos(
  line: 4,
  column: 47,
)))
